--- a/src/nkb-app/index.html
+++ b/src/nkb-app/index.html
@@ -12,7 +12,7 @@
 
         <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
 
-        <title ng-bind-template='{{::_trc("Арбитражные дела — НКБ", "Наименование приложения")}}'>Арбитражные дела — НКБ</title>
+        <title ng-bind-template='{{app.title ? app.title + " — " : ""}}{{::_trc("Арбитражные дела — НКБ", "Наименование приложения")}}'>Арбитражные дела — НКБ</title>
 
         <style type="text/css">
             .app-state-indicator {
@@ -35,6 +35,10 @@
 
     <body>
         <div class="app-state-indicator" ng-hide="isAppReady()"></div>
-        <div np-autokad></div>
+        <div class="container">
+            <hr>
+            <div np-autokad></div>
+            <hr>
+        </div>
     </body>
 </html>
